# ebpf-action

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TESTING.md  action.yml  docker-bake.hcl  justfile  lefthook.yml  xdp.c
.devcontainer/: Dockerfile  devcontainer.json
.github/: security.yml
.github/workflows/: action.yml  claude.yml  ebpf-security-tests.yml
bee-trace/: Cargo.toml  build.rs
bee-trace-bindings/: Cargo.toml
bee-trace-bindings/src/: lib.rs  vmlinux.rs
bee-trace-common/: Cargo.toml
bee-trace-common/src/: lib.rs
bee-trace-ebpf/: Cargo.toml
bee-trace-ebpf/src/: file_monitor.rs  lib.rs  lsm.rs  main.rs  memory.rs  network.rs
bee-trace-ebpf/tests/: ebpf_tests.rs
bee-trace/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  output_strategy.rs  report.rs  security_classifier.rs  security_config.rs
bee-trace/src/configuration/: builder.rs  mod.rs  types.rs  validation.rs
bee-trace/src/ebpf_manager/: application.rs  file_probe_manager.rs  memory_probe_manager.rs  mod.rs  network_probe_manager.rs  probe_manager.rs
bee-trace/src/event_processing/: buffer_manager.rs  mod.rs  parser.rs  processor.rs
bee-trace/tests/: config_tests.rs  configuration_tests.rs  ebpf_integration_tests.rs  event_processing_tests.rs  functional_tests.rs  integration_tests.rs  legacy_config_tests.rs.bak  probe_manager_tests.rs  test_helpers.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  DEVELOPMENT_ROADMAP.md  INSTRUCTIONS.md  README.md  TDD_METHODOLOGY.md  TESTING.md  TODO.md  feature-requirements.md  instructions.md
docs/01-getting-started/: development-setup.md  project-overview.md  quick-start-guide.md
docs/02-architecture/: component-reference.md  design-principles.md  system-architecture.md
docs/03-development/: ai-native-development.md  contribution-workflow.md  testing-strategy.md
docs/04-project-status/: development-roadmap.md  feature-specifications.md  rearchitecture.md
docs/05-technical-details/: README.md  configuration-migration.md  task-01-minor-fixes-quick-wins.md  task-02-network-ip-address-enhancement.md  task-04-security-enhancements.md  (+5 more)
examples/: tdd_refactoring_patterns.rs
socket/: Cargo.toml  build.rs
socket-common/: Cargo.toml
socket-ebpf/: Cargo.toml
tests/: ebpf-ci-test-framework.md  test.sh
(+10 files in other folders)
