[package]
name = "bee-trace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
bee-trace-common = { path = "../bee-trace-common" }
bee-trace-bindings = { path = "../bee-trace-bindings" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "bee-trace"
path = "src/main.rs"
