[package]
name = "bee-trace"
version = "0.1.0"
edition = "2021"

license.workspace = true

[dependencies]
bee-trace-common = { path = "../bee-trace-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
bytes = "1.0"
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
bee-trace-ebpf = { path = "../bee-trace-ebpf" }

[[bin]]
name = "bee-trace"
path = "src/main.rs"
